# gameoflife

./: Cargo.toml  README.md  run.sh
.cargo/: config
src/: game.rs  main.rs  vga_buffer.rs
